# up42-junior-backend-challenge

./: .gitignore  README.md
java/: .gitignore  build.gradle
java/src/main/java/com/up42/challenge/: ChallengeApplication.java
java/src/main/java/com/up42/challenge/controller/: FeatureController.java
java/src/main/java/com/up42/challenge/model/: Feature.java  FeatureCollection.java  FeatureProperties.java  Geometry.java
java/src/main/java/com/up42/challenge/service/: FeatureService.java
java/src/test/java/com/up42/challenge/controller/: FeatureControllerTest.java
java/src/test/java/com/up42/challenge/service/: FeatureServiceTest.java
java/src/test/resources/testdata/: features-with-nulls.json
kotlin/: build.gradle.kts
kotlin/src/main/kotlin/com/up42/challenge/: ChallengeApplication.kt
kotlin/src/main/kotlin/com/up42/challenge/controller/: FeatureController.kt
kotlin/src/main/kotlin/com/up42/challenge/entity/: Data.kt
kotlin/src/main/kotlin/com/up42/challenge/service/: FeatureService.kt
kotlin/src/main/resources/: application.yaml  source-data.json
kotlin/src/test/kotlin/com/up42/challenge/: ChallengeApplicationTests.kt
kotlin/src/test/kotlin/com/up42/challenge/controller/: FeatureControllerTest.kt
kotlin/src/test/kotlin/com/up42/challenge/service/: FeatureServiceTest.kt
kotlin/src/test/resources/testdata/: empty-feature-list.json  features-duplicate-ids.json  mixed-feature-collections.json
python/: .gitignore  pyproject.toml  requirements.txt
python/src/: controller.py  main.py  models.py  service.py
python/tests/: test_service.py
